--- a/index.html
+++ b/index.html
@@ -1,153 +1,234 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
+
 <head>
-<title>Basic 88</title>
-<meta charset="iso-8859-1">
-<link rel="stylesheet" href="styles/layout.css" type="text/css">
-<!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Unit for Data Science</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
+
 <body>
-<div class="wrapper row1">
-  <header id="header" class="clear">
-    <div id="hgroup">
-      <h1><a href="#">Basic 88</a></h1>
-      <h2>Free HTML5 Website Template</h2>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li class="last"><a href="#">Text Link</a></li>
-      </ul>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav" href="#"></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li>
+                        <a href="#services">Activity</a>
+                    </li>
+                    <li>
+                        <a href="mailto:msimeone@asu.edu?Subject=Hello%20again">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
     </nav>
-  </header>
-</div>
-<!-- content -->
-<div class="wrapper row2">
-  <div id="container" class="clear">
-    <!-- Slider -->
-    <section id="slider"><a href="#"><img src="images/demo/960x360.gif" alt=""></a></section>
-    <!-- main content -->
-    <div id="homepage">
-      <!-- Services -->
-      <section id="services" class="clear">
-        <article class="one_third">
-          <figure><img src="images/demo/290x180.gif" width="290" height="180" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_third">
-          <figure><img src="images/demo/290x180.gif" width="290" height="180" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_third lastbox">
-          <figure><img src="images/demo/290x180.gif" width="290" height="180" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-      </section>
-      <!-- / Services -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- Introduction -->
-      <section id="intro" class="last clear">
-        <article>
-          <figure><img src="images/demo/450x250.gif" width="450" height="250" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis leo nibh</h2>
-              <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="http://www.os-templates.com/template-terms">website template licence</a>.</p>
-              <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="http://www.os-templates.com/">free website templates</a>.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-      </section>
-      <!-- / Introduction -->
+
+
+    <!-- Header -->
+    <a name="about"></a>
+    <div class="intro-header">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1>Unit for Data Science</h1>
+                        <h3>A Research Organization at Arizona State University Library</h3>
+                        <hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+                            <!--<li>
+                                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            </li> -->
+                            <li>
+                                <a href="https://github.com/UnitForDataScience" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            </li>
+                            <!--<li>
+                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            </li><-->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
     </div>
-    <!-- / content body -->
-  </div>
-</div>
-<!-- Footer -->
-<div class="wrapper row3">
-  <div id="footer" class="clear">
-    <!-- Section One -->
-    <section class="one_quarter">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- Section Two -->
-    <section class="one_quarter">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- Section Three -->
-    <section class="one_quarter">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- Section Four -->
-    <section class="one_quarter lastbox">
-      <h2 class="title">Link Block</h2>
-      <nav>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li><a href="#">Amet consectetur</a></li>
-          <li><a href="#">Praesent vel sem id</a></li>
-          <li><a href="#">Curabitur hendrerit est</a></li>
-          <li class="last"><a href="#">Sed a nulla urna</a></li>
-        </ul>
-      </nav>
-    </section>
-    <!-- / Section -->
-  </div>
-</div>
-<!-- Copyright -->
-<div class="wrapper row4">
-  <footer id="copyright" class="clear">
-    <p class="fl_left">Copyright &copy; 2012 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-  </footer>
-</div>
+    <!-- /.intro-header -->
+
+    <!-- Page Content -->
+
+	<a  name="activity"></a>
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Intersections of knowledge, language, visualization, computer science, engineering:</h2>
+                    <p class="lead">Unit for Data Science joins new disciplines and lines of questioning to transform the realm of data-driven research. We lead original research projects as well as collaborate with faculty and stff at ASU and beyond. The Director of the Unit for Data Science is <a href="https://www.linkedin.com/in/michael-simeone-366760a9/">Michael Simeone.</a></p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="img/wiki.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Data Science within Libraries</h2>
+                    <p class="lead">We work within the ASU Library as an intersection of knowledge resources and mixed-methods approaches for gaining insights from data.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="img/library.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Our Current Work</h2>
+                    <p class="lead">Our current projects work with automated document comprehension, multi-display decision support tools, and community resilience.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="img/heat.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+	<!--<a  name="contact"></a>
+    <div class="banner">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>Connect to Start Bootstrap:</h2>
+                </div>
+                <div class="col-lg-6">
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div> -->
+        <!-- /.container -->
+
+    </div>
+    <!-- /.banner -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#about">About</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#services">Activity</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="mailto:msimeone@asu.edu?Subject=Hello%20again">Contact</a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted small">Copyright &copy; Unit for Data Science 2017. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
