fixed typos in web copy

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Intersections of knowledge, language, visualization, computer science, engineering:</h2>
-                    <p class="lead">Unit for Data Science joins new disciplines and lines of questioning to transform the realm of data-driven research. We lead original research projects as well as collaborate with faculty and stff at ASU and beyond. The Director of the Unit for Data Science is <a href="https://www.linkedin.com/in/michael-simeone-366760a9/">Michael Simeone.</a></p>
+                    <p class="lead">Unit for Data Science joins disciplines and creative lines of questioning to transform the realm of data-driven research. We lead original research projects as well as collaborate with faculty, staff, and students at ASU and beyond. The Director of the Unit for Data Science is <a href="https://www.linkedin.com/in/michael-simeone-366760a9/">Michael Simeone.</a></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/wiki.png" alt="">
